<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.jeffersonaraujo.filmesfamosos.DetalheFilmeActivity">
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="start"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/img_back_filme_detalhe"
                android:scaleType="centerCrop"
                android:layout_width="match_parent"
                android:layout_height="150dp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:orientation="horizontal"
                android:padding="15dp">
                <ImageView
                    android:id="@+id/img_miniatura_filme_detalhe"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:gravity="start"
                    android:paddingStart="15dp">
                    <TextView
                        android:id="@+id/titulo_filme_detalhe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:paddingBottom="20dp"/>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="start"
                        android:paddingStart="12dp">
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="14sp"
                                android:text="@string/detalhe_titulo_original"
                                android:textStyle="bold"
                                android:paddingEnd="14dp"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="12sp"
                                android:text="@string/detalhe_avaliacao"
                                android:textStyle="bold"
                                android:paddingEnd="14dp"/>
                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="12sp"
                                android:text="@string/detalhe_lancamento"
                                android:textStyle="bold"
                                android:paddingEnd="14dp"/>
                        </LinearLayout>
                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:orientation="vertical">
                            <TextView
                                android:id="@+id/detalhe_titulo_original"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="12sp" />
                            <TextView
                                android:id="@+id/detalhe_avaliacao"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="12sp" />
                            <TextView
                                android:id="@+id/detalhe_data_lancamento"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:textSize="12sp" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/detalhe_sinopse"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/detalhe_trailes"
                android:textStyle="bold"
                android:paddingStart="15dp"/>
            <android.support.v7.widget.RecyclerView
                android:padding="15dp"
                android:id="@+id/recycler_trailer"
                android:layout_width="match_parent"
                android:layout_height="match_parent" android:orientation="horizontal"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/detalhe_Reviews"
                android:textStyle="bold"
                android:paddingStart="15dp"/>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</android.support.constraint.ConstraintLayout>
